--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div id="navbar" class="gjs-grid-row">
     <div id="navbar-column" class="gjs-grid-column">
       <div id="navbar-wrapper" class="gjs-grid-row">
-        <div id="navcol" class="gjs-grid-column"><img id="i48rvi-2" src="assets/afaztitle.png" alt="afaz Title Logo">
+        <div id="navcol" class="gjs-grid-column"><img id="i48rvi-2" src="assets/afaztitle.png" alt="afaz Title Logo"/>
         </div>
         <div id="navcol2" class="gjs-grid-column">
           <div id="nav-menu" class="gjs-grid-row">
@@ -75,8 +75,9 @@
   </div>
   <div id="hero" class="gjs-grid-row">
     <div id="iycz3" class="gjs-grid-column">
-      <h1 id="irjua" class="gjs-heading"><strong>Hey! I'm Firdaus </strong><span id="i4jn1p"
-          class="gjs-text-blue"><strong id="i2miy">Zaki</strong></span></h1>
+      <h1 id="irjua" class="gjs-heading">
+        <strong>Hey! I'm Firdaus </strong><span id="i4jn1p" class="gjs-text-blue"><strong id="i2miy">Zaki</strong></span>
+      </h1>
       <div id="subheader" class="text-main-content">
         <div id="ivuqh">
           <div id="ivm4u"><span id="iqhf4">An alumnus of MRSM Langkawi, skilled in software development, web
@@ -94,15 +95,17 @@
   <div id="past-projects" class="gjs-grid-row">
     <div id="i8w4i" class="gjs-grid-column">
       <h4 id="ihs4lb" class="gjs-heading gjs-text-blue"><strong id="i9zgf">Past Projects</strong></h4>
-      <h2 id="iiacm" class="gjs-heading"><strong id="i0dv3">Here are some of my <span id="icxfor"
-            class="gjs-text-blue">Past Projects</span></strong></h2><!--Desktop Carousel Starts Here-->
+      <h2 id="iiacm" class="gjs-heading">
+        <strong id="i0dv3">Here are some of my <span id="icxfor" class="gjs-text-blue">Past Projects</span></strong>
+      </h2>
+      <!--Desktop Carousel Starts Here-->
       <div id="customCarousel" data-bs-ride="carousel" class="carousel slide mt-4 gjs-editable d-none d-lg-block">
         <!-- Indicators -->
-        <div id="ittgu" class="carousel-indicators gjs-draggable"><button type="button" data-bs-target="#customCarousel"
-            data-bs-slide-to="0" id="i2q0a" class="active">Button</button><button type="button"
-            data-bs-target="#customCarousel" data-bs-slide-to="1">Button</button><button type="button"
-            data-bs-target="#customCarousel" data-bs-slide-to="2">Button</button></div><!-- Carousel Inner -->
-        <div id="ihh53" class="carousel-inner gjs-editable"><!-- First Slide -->
+        <div id="ittgu" class="carousel-indicators gjs-draggable">
+          <button type="button" data-bs-target="#customCarousel" data-bs-slide-to="0" id="i2q0a" class="active">Button</button><button type="button" data-bs-target="#customCarousel" data-bs-slide-to="1">Button</button><button type="button" data-bs-target="#customCarousel" data-bs-slide-to="2">Button</button>
+        </div><!-- Carousel Inner -->
+        <div id="ihh53" class="carousel-inner gjs-editable">
+          <!-- First Slide -->
           <div id="icyl7" class="carousel-item active gjs-draggable">
             <div id="iac6f-2" class="carousel-content">
               <div data-type-role="flex-row" id="imqvkv-4" class="gjs-plg-flex-row">
@@ -162,52 +165,10 @@
               </div>
             </div>
           </div>
-        </div><!-- Controls --><button type="button" data-bs-target="#customCarousel" data-bs-slide="prev" id="ietyss"
-          class="carousel-control-prev gjs-draggable"><span id="izg80a"
-            class="carousel-control-prev-icon"></span></button><button type="button" data-bs-target="#customCarousel"
-          data-bs-slide="next" id="ibdjcq" class="carousel-control-next gjs-draggable"><span id="iarkdv"
-            title="mOLVYPUOQ" class="carousel-control-next-icon"></span></button>
-      </div><!-- Desktop Carousel Ends Here -->
-
-      <!-- Mobile/Tablet Carousel (Cards) Starts Here -->
-      <div id="customCardCarousel" class="d-lg-none mt-4">
-        <div class="card-carousel-container">
-          <div class="card-carousel">
-            <!-- First Card -->
-            <div class="card">
-              <iframe allowfullscreen
-                src="https://www.youtube.com/embed/g4SFLh9Imq4?&loop=1&playlist=g4SFLh9Imq4"></iframe>
-              <div class="card-body">
-                <h5 class="card-title">Generative AI NPC Dialogue System</h5>
-                <p class="card-text">Deployed an API server on Render using FastAPI, integrating AI for immersive NPC
-                  dialogue in any game engine.</p>
-                <a href="#" class="btn btn-primary">View More</a>
-              </div>
-            </div>
-            <!-- Second Card -->
-            <div class="card">
-              <iframe allowfullscreen src="https://www.youtube.com/embed/gpotQWYRFac?"></iframe>
-              <div class="card-body">
-                <h5 class="card-title">Joystick Controller</h5>
-                <p class="card-text">Built a joystick controller using Arduino Mega and connected components,
-                  communicating with software via JSON or simulated inputs.</p>
-                <a href="#" class="btn btn-primary">View More</a>
-              </div>
-            </div>
-            <!-- Third Card -->
-            <div class="card">
-              <iframe allowfullscreen src="https://www.youtube.com/embed/k_mOLVYPUOQ?"></iframe>
-              <div class="card-body">
-                <h5 class="card-title">Orbital Mechanics Simulation</h5>
-                <p class="card-text">Developed an orbital mechanics simulation in...</p>
-                <a href="#" class="btn btn-primary">View More</a>
-              </div>
-            </div>
-          </div>
         </div>
-      </div>
-
-
+        <!-- Controls --><button type="button" data-bs-target="#customCarousel" data-bs-slide="prev" id="ietyss" class="carousel-control-prev gjs-draggable"><span id="izg80a" class="carousel-control-prev-icon"></span></button><button type="button" data-bs-target="#customCarousel" data-bs-slide="next" id="ibdjcq" class="carousel-control-next gjs-draggable"><span id="iarkdv" title="mOLVYPUOQ" class="carousel-control-next-icon"></span></button>
+      </div><!-- Desktop Carousel Ends Here -->
+      <!-- Mobile/Tablet Carousel (Cards) Starts Here -->
     </div>
   </div>
   <div id="education" class="gjs-grid-row">
@@ -220,8 +181,9 @@
           <div data-type-role="flex-column" id="i3mqhw-4" class="gjs-plg-flex-column">
             <div id="il0alf">
               <div id="iov1wd"><span id="ifzbe4"><strong id="ipot2i">Schule Höchi Dättwil</strong></span></div>
-              <div draggable="true" id="ijal46"><span draggable="true" id="ip7cyo"><strong draggable="true"
-                    id="im4r7c">( 2011 - 2013 )</strong></span></div>
+              <div draggable="true" id="ijal46">
+                <span draggable="true" id="ip7cyo"><strong draggable="true" id="im4r7c">( 2011 - 2013 )</strong></span>
+              </div>
             </div>
           </div>
         </div>
@@ -229,8 +191,9 @@
           <div data-type-role="flex-column" id="i3mqhw-4-2" class="gjs-plg-flex-column">
             <div id="il0alf-2">
               <div id="iov1wd-2"><span id="i85as3-2"><strong id="ih6i3f-2">SK Seksyen 9 Shah Alam</strong></span></div>
-              <div draggable="true" id="ijyrsh"><span draggable="true" id="ip7cyo-2"><strong draggable="true"
-                    id="im4r7c-2">( 2014 - 2019 )</strong></span></div>
+              <div draggable="true" id="ijyrsh">
+                <span draggable="true" id="ip7cyo-2"><strong draggable="true" id="im4r7c-2">( 2014 - 2019 )</strong></span>
+              </div>
             </div>
           </div>
         </div>
@@ -238,8 +201,9 @@
           <div data-type-role="flex-column" id="i3mqhw-3" class="gjs-plg-flex-column">
             <div id="i07hta">
               <div id="idcp5i"><span id="ignmm5"><strong id="iw1l7b">MRSM Langkawi</strong></span></div>
-              <div draggable="true" id="ikqbj6"><span draggable="true" id="iq3im1"><strong draggable="true"
-                    id="i4l4ob">( 2020 - 2024 )</strong></span></div>
+              <div draggable="true" id="ikqbj6">
+                <span draggable="true" id="iq3im1"><strong draggable="true" id="i4l4ob">( 2020 - 2024 )</strong></span>
+              </div>
             </div>
           </div>
         </div>
@@ -249,8 +213,8 @@
   <div id="footer" class="gjs-grid-row">
     <div id="ilriti" class="gjs-grid-column">
       <div id="im0rle" class="gjs-grid-row">
-        <div id="iotp6j" class="gjs-grid-column"><a href="/" id="iih6cv" class="gjs-link-box"><img id="i48rvi"
-              src="assets/afaztitle.png" alt="afaz Title Logo"></a></div>
+        <div id="iotp6j" class="gjs-grid-column"><a href="/" id="iih6cv"
+            class="gjs-link-box"><img id="i48rvi" src="assets/afaztitle.png" alt="afaz Title Logo"/></a></div>
         <div id="i1hx7l" class="gjs-grid-column"><a id="ij7g8t" title="" href="##" class="gjs-link">
             <div>Discord</div>
           </a><a id="ipjdtn" href="##" class="gjs-link">
@@ -267,6 +231,10 @@
   </div><!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   &gt;
+
+
+
+
 
 
 
