--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div id="navbar" class="gjs-grid-row">
     <div id="navbar-column" class="gjs-grid-column">
       <div id="navbar-wrapper" class="gjs-grid-row">
-        <div id="navcol" class="gjs-grid-column"><img id="i48rvi-2" src="assets/afaztitle.png" alt="afaz Title Logo"/>
+        <div id="navcol" class="gjs-grid-column"><img id="i48rvi-2" src="assets/afaztitle.png" alt="afaz Title Logo" />
         </div>
         <div id="navcol2" class="gjs-grid-column">
           <div id="nav-menu" class="gjs-grid-row">
@@ -76,7 +76,8 @@
   <div id="hero" class="gjs-grid-row">
     <div id="iycz3" class="gjs-grid-column">
       <h1 id="irjua" class="gjs-heading">
-        <strong>Hey! I'm Firdaus </strong><span id="i4jn1p" class="gjs-text-blue"><strong id="i2miy">Zaki</strong></span>
+        <strong>Hey! I'm Firdaus </strong><span id="i4jn1p" class="gjs-text-blue"><strong
+            id="i2miy">Zaki</strong></span>
       </h1>
       <div id="subheader" class="text-main-content">
         <div id="ivuqh">
@@ -102,7 +103,10 @@
       <div id="customCarousel" data-bs-ride="carousel" class="carousel slide mt-4 gjs-editable d-none d-lg-block">
         <!-- Indicators -->
         <div id="ittgu" class="carousel-indicators gjs-draggable">
-          <button type="button" data-bs-target="#customCarousel" data-bs-slide-to="0" id="i2q0a" class="active">Button</button><button type="button" data-bs-target="#customCarousel" data-bs-slide-to="1">Button</button><button type="button" data-bs-target="#customCarousel" data-bs-slide-to="2">Button</button>
+          <button type="button" data-bs-target="#customCarousel" data-bs-slide-to="0" id="i2q0a"
+            class="active">Button</button><button type="button" data-bs-target="#customCarousel"
+            data-bs-slide-to="1">Button</button><button type="button" data-bs-target="#customCarousel"
+            data-bs-slide-to="2">Button</button>
         </div><!-- Carousel Inner -->
         <div id="ihh53" class="carousel-inner gjs-editable">
           <!-- First Slide -->
@@ -166,9 +170,40 @@
             </div>
           </div>
         </div>
-        <!-- Controls --><button type="button" data-bs-target="#customCarousel" data-bs-slide="prev" id="ietyss" class="carousel-control-prev gjs-draggable"><span id="izg80a" class="carousel-control-prev-icon"></span></button><button type="button" data-bs-target="#customCarousel" data-bs-slide="next" id="ibdjcq" class="carousel-control-next gjs-draggable"><span id="iarkdv" title="mOLVYPUOQ" class="carousel-control-next-icon"></span></button>
+        <!-- Controls --><button type="button" data-bs-target="#customCarousel" data-bs-slide="prev" id="ietyss"
+          class="carousel-control-prev gjs-draggable"><span id="izg80a"
+            class="carousel-control-prev-icon"></span></button><button type="button" data-bs-target="#customCarousel"
+          data-bs-slide="next" id="ibdjcq" class="carousel-control-next gjs-draggable"><span id="iarkdv"
+            title="mOLVYPUOQ" class="carousel-control-next-icon"></span></button>
       </div><!-- Desktop Carousel Ends Here -->
-      <!-- Mobile/Tablet Carousel (Cards) Starts Here -->
+      <!-- Mobile & Tablet Carousel Starts Here -->
+      <div id="mobileCardCarousel" class="d-lg-none mt-5">
+        <div class="card-carousel-container">
+          <div class="card-carousel">
+            <div class="carousel-card">
+              <iframe allowfullscreen
+                src="https://www.youtube.com/embed/g4SFLh9Imq4?&loop=1&playlist=g4SFLh9Imq4"></iframe>
+              <h5>Generative AI NPC Dialogue System</h5>
+              <p>Deployed an API server on Render using FastAPI, integrating AI for immersive NPC dialogues in any game
+                engine.</p>
+              <button class="btn btn-primary">View More</button>
+            </div>
+            <div class="carousel-card">
+              <iframe allowfullscreen src="https://www.youtube.com/embed/gpotQWYRFac?"></iframe>
+              <h5>Joystick Controller</h5>
+              <p>Built using components connected to an Arduino Mega. Communicates with software through JSON or keybind
+                simulation.</p>
+              <button class="btn btn-primary">View More</button>
+            </div>
+            <div class="carousel-card">
+              <iframe allowfullscreen src="https://www.youtube.com/embed/k_mOLVYPUOQ?"></iframe>
+              <h5>Orbital Mechanics Simulation</h5>
+              <p>Developed a physics-based orbital simulation using Godot, inspired by Kerbal Space Program.</p>
+              <button class="btn btn-primary">View More</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
   <div id="education" class="gjs-grid-row">
@@ -192,7 +227,8 @@
             <div id="il0alf-2">
               <div id="iov1wd-2"><span id="i85as3-2"><strong id="ih6i3f-2">SK Seksyen 9 Shah Alam</strong></span></div>
               <div draggable="true" id="ijyrsh">
-                <span draggable="true" id="ip7cyo-2"><strong draggable="true" id="im4r7c-2">( 2014 - 2019 )</strong></span>
+                <span draggable="true" id="ip7cyo-2"><strong draggable="true" id="im4r7c-2">( 2014 - 2019
+                    )</strong></span>
               </div>
             </div>
           </div>
@@ -213,8 +249,8 @@
   <div id="footer" class="gjs-grid-row">
     <div id="ilriti" class="gjs-grid-column">
       <div id="im0rle" class="gjs-grid-row">
-        <div id="iotp6j" class="gjs-grid-column"><a href="/" id="iih6cv"
-            class="gjs-link-box"><img id="i48rvi" src="assets/afaztitle.png" alt="afaz Title Logo"/></a></div>
+        <div id="iotp6j" class="gjs-grid-column"><a href="/" id="iih6cv" class="gjs-link-box"><img id="i48rvi"
+              src="assets/afaztitle.png" alt="afaz Title Logo" /></a></div>
         <div id="i1hx7l" class="gjs-grid-column"><a id="ij7g8t" title="" href="##" class="gjs-link">
             <div>Discord</div>
           </a><a id="ipjdtn" href="##" class="gjs-link">
